feat: also order groups based on displayName